# ChangeLog for x11-libs/libXau
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXau/ChangeLog,v 1.40 2007/02/04 18:23:30 joshuabaergen Exp $

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  libXau-1.0.1.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  06 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> libXau-1.0.2.ebuild:
  Stable on Alpha.

*libXau-1.0.3 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXau-1.0.3.ebuild:
  Version bump for 7.2.  Build/dist fix only.

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> libXau-1.0.2.ebuild:
  Stable on ia64.

  08 Oct 2006; Simon Stelling <blubb@gentoo.org> libXau-1.0.2.ebuild:
  stable on amd64

  12 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> libXau-1.0.2.ebuild:
  Stable on hppa

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> libXau-1.0.2.ebuild:
  Marked stable on mips.

  24 Aug 2006; Markus Rothe <corsair@gentoo.org> libXau-1.0.2.ebuild:
  Stable on ppc64

  22 Aug 2006; Ferris McCormick <fmccor@gentoo.org> libXau-1.0.2.ebuild:
  Stable on sparc.

  20 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; libXau-1.0.2.ebuild:
  Stable on x86/ppc.

  29 Jul 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  libXau-1.0.2.ebuild:
  Depend on the newest version of util-macros for code-checking macros used
  here.

*libXau-1.0.2 (29 Jul 2006)

  29 Jul 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXau-1.0.2.ebuild:
  Version bump.  Includes minor cleanups.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXau-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXau-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXau-1.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; -libXau-1.0.0.ebuild: