@@ -1,3 +1,0 @@
-MD5 8b233b9c645ab34d29da512c9a8f1f6e libXau-1.0.1.tar.bz2 231634
-RMD160 3d500258d6b13c05a36b0b1bc843bcba5504fcb2 libXau-1.0.1.tar.bz2 231634
-SHA256 c690fdb0f65e31bc144ff7272d4b9d305e7572be612a660f5b533a48997169c0 libXau-1.0.1.tar.bz2 231634
