@@ -1,18 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXau/Attic/libXau-1.0.1.ebuild,v 1.9 2007/02/04 18:23:30 joshuabaergen Exp $
-
-# Must be before x-modular eclass is inherited
-#SNAPSHOT="yes"
-
-inherit x-modular
-
-DESCRIPTION="X.Org Xau library"
-#HOMEPAGE="http://foo.bar.com/"
-#SRC_URI="ftp://foo.bar.com/${P}.tar.bz2"
-#LICENSE=""
-#SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
-#IUSE="X gnome"
-RDEPEND="x11-proto/xproto"
-DEPEND="${RDEPEND}"
