@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXau
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXau/ChangeLog,v 1.40 2007/02/04 18:23:30 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXau/ChangeLog,v 1.41 2007/04/21 15:42:23 joshuabaergen Exp $
+
+  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  -libXau-1.0.1.ebuild:
+  Clean out old version.
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   libXau-1.0.1.ebuild:
